Use activate on single click setting from QPlatformTheme

Our QPlatformTheme already provide a hint as to whether items should
activate on single click and it updates when the setting changes

QCommonStyle by default uses the QPlatformTheme

This removes duplicating the lookup and also means we now update the
setting if it changes at runtime

REVIEW: 122293
BUG: 343418